mirrorgate-dashboard/src/sass/components/_build-dashboard.scss
/*!
 * Copyright 2017 Banco Bilbao Vizcaya Argentaria, S.A.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.builds{
    align-items: stretch;

    path.slice{
        stroke-width:2px;
    }

    polyline{
        opacity: .3;
        stroke: black;
        stroke-width: 2px;
        fill: none;
    }

    .gauge-title {
        text-transform: uppercase;
        text-decoration: underline;
    }

}

.build-status{
    font-size: $level-3;
    font-weight: 400;
    text-align: center;
}

.build-info {
    text-align: center;
    pointer-events: none;
    overflow: visible;

    .status {
        font-size:90px;
        line-height: 95px;
    }

    .project {
        font-size: 25px;
    }

    .box {
        overflow: hidden;
        text-overflow: ellipsis;
        -webkit-line-clamp: 3;
        -webkit-box-orient: vertical;
        display: -webkit-box;
        word-break: break-all;
        margin-top: 20px;
        font-size: 25px;
        line-height: 40px;
    }

    .date {
        display: block;
        font-size: 40px;
        line-height: 45px;
    }

    .duration {
        font-size: 40px;
        line-height: 50px;
        text-align: center;
    }

}

.build-result {
    fill: rgba(100,100,100,0.3);
}

.build-result.clickable {
    cursor: pointer;
}

.status-success {
    color: $green;
}

.status-failure {
    color: $red;
}

.status-inprogress {
    color: $blue;
}

.status-unstable {
    color: $yellow;
}

svg .status-success {
    fill: $green;
}

svg .status-aborted {
    fill: #7e7e7e;
}

svg .status-failure {
    fill: $red;
}

svg .status-inprogress {
    fill: $blue;
}

svg .status-unstable {
    fill: $yellow;
}

.slices.dimmed path {
    fill-opacity: 0.3;
}

.slices.dimmed path:hover {
    fill-opacity: 1;
}

